welcome.lessons.welcome.loopwhile.LoopWhile.scala.error
Program:1: error: ';' expected but 'false' found.
while (estFaceMur())==false{
                      ^